appId: com.myrights.app
---
- launchApp:
    clearState: true
- tapOn:
    text: "Skip"
- tapOn:
    text: "Guest"
- tapOn:
    text: "Tools"
- tapOn:
    text: "Legal Aid"
- assertVisible:
    text: "Legal"
